@@ -21,6 +21,7 @@ import com.google.auto.value.AutoValue;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.flyte.examples.AllInputsTask.AutoAllInputsOutput;
@@ -40,6 +41,8 @@ public class AllInputsWorkflow extends SdkWorkflow<AllInputsWorkflow.AllInputsWo
   @Override
   public void expand(SdkWorkflowBuilder builder) {
 
+    Instant someInstant = Instant.parse("2023-01-16T00:00:00Z");
+
     SdkNode<AutoAllInputsOutput> apply =
         builder.apply(
             "all-inputs",
@@ -48,10 +51,12 @@ public class AllInputsWorkflow extends SdkWorkflow<AllInputsWorkflow.AllInputsWo
                 SdkBindingData.ofFloat(2),
                 SdkBindingData.ofString("test"),
                 SdkBindingData.ofBoolean(true),
-                SdkBindingData.ofDatetime(Instant.EPOCH),
+                SdkBindingData.ofDatetime(someInstant),
                 SdkBindingData.ofDuration(Duration.ofDays(1L)),
-                SdkBindingData.ofCollection(Arrays.asList("foo", "bar"), SdkBindingData::ofString),
-                SdkBindingData.ofMap(Map.of("test", "test"), SdkBindingData::ofString)));
+                SdkBindingData.ofStringCollection(Arrays.asList("foo", "bar")),
+                SdkBindingData.ofStringMap(Map.of("test", "test")),
+                SdkBindingData.ofStringCollection(Collections.emptyList()),
+                SdkBindingData.ofIntegerMap(Collections.emptyMap())));
     AllInputsTask.AutoAllInputsOutput outputs = apply.getOutputs();
 
     builder.output("i", outputs.i(), "Integer value");
@@ -62,6 +67,8 @@ public class AllInputsWorkflow extends SdkWorkflow<AllInputsWorkflow.AllInputsWo
     builder.output("d", outputs.d(), "Duration value");
     builder.output("l", outputs.l(), "List value");
     builder.output("m", outputs.m(), "Map value");
+    builder.output("emptyList", outputs.emptyList(), "Empty list value");
+    builder.output("emptyMap", outputs.emptyMap(), "Empty map value");
   }
 
   @AutoValue
@@ -86,6 +93,10 @@ public class AllInputsWorkflow extends SdkWorkflow<AllInputsWorkflow.AllInputsWo
 
     public abstract SdkBindingData<Map<String, String>> m();
 
+    public abstract SdkBindingData<List<String>> emptyList();
+
+    public abstract SdkBindingData<Map<String, Long>> emptyMap();
+
     public static AllInputsWorkflow.AllInputsWorkflowOutput create(
         long i,
         Double f,
@@ -94,7 +105,9 @@ public class AllInputsWorkflow extends SdkWorkflow<AllInputsWorkflow.AllInputsWo
         Instant t,
         Duration d,
         List<String> l,
-        Map<String, String> m) {
+        Map<String, String> m,
+        List<String> emptyList,
+        Map<String, Long> emptyMap) {
       return new AutoValue_AllInputsWorkflow_AllInputsWorkflowOutput(
           SdkBindingData.ofInteger(i),
           SdkBindingData.ofFloat(f),
@@ -102,8 +115,10 @@ public class AllInputsWorkflow extends SdkWorkflow<AllInputsWorkflow.AllInputsWo
           SdkBindingData.ofBoolean(b),
           SdkBindingData.ofDatetime(t),
           SdkBindingData.ofDuration(d),
-          SdkBindingData.ofCollection(l, SdkBindingData::ofString),
-          SdkBindingData.ofMap(m, SdkBindingData::ofString));
+          SdkBindingData.ofStringCollection(l),
+          SdkBindingData.ofStringMap(m),
+          SdkBindingData.ofStringCollection(emptyList),
+          SdkBindingData.ofIntegerMap(emptyMap));
     }
   }
 }
